--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "xml-stream": "~0.4.0",
-    "lodash": "~3.3.1"
+    "lodash": "~3.3.1",
+    "async": "~0.9.0"
   },
   "author": "Ludovic LEFEVRE",
   "license": "MIT"
